Edit ref doc to include information on TTL/TTI expiration when using Spring Data Redis Cache implementation.
Edit Javadoc in RedisCacheManager.

Closes #2351